@@ -20,6 +20,7 @@ longer available.
 The following bugs have been fixed in the 1.5.6 release.
 
 K  7140	NPE by APOP detection when no greeting banner
+K  7151	InternetAddress.parse fails for valid domain literal address
 
 
 		  CHANGES IN THE 1.5.5 RELEASE
